welcome.lessons.welcome.array.has271.Has271.scala.error
has271:10: error: Boolean does not take parameters
		(nums(i+2)==nums(i)-2) {
                                       ^